# trees

./: .gitignore  CMAKELists.txt  generate_scaffold.sh  test_launcher.sh
app/: dev_main.cpp  main.cpp
header/: tree_node.hpp
header/binary_search_tree/: convert_sorted_array_to_binary_search_tree.hpp  find_closest_value.hpp  is_valid_bst.hpp  mode.hpp  next_greater_number.hpp  range_sum_of_bst.hpp
header/binary_tree/: branch_sum.hpp  corresponding_node_of_bt_in_clone.hpp  count_complete_tree_nodes.hpp  node_depths.hpp  number_of_full_nodes.hpp  number_of_half_nodes.hpp
header/queries/: kth_ancestor_of_tree_node.hpp
header/traversal/: inorder.hpp  preorder.hpp
src/: core_lib.cpp
src/binary_search_tree/: convert_sorted_array_to_binary_search_tree.cpp  find_closest_value.cpp  is_valid_bst.cpp  mode.cpp  next_greater_number.cpp  range_sum_of_bst.cpp
src/binary_tree/: branch_sum.cpp  corresponding_node_of_bt_in_clone.cpp  count_complete_tree_nodes.cpp  node_depths.cpp  number_of_full_nodes.cpp  number_of_half_nodes.cpp
src/queries/: kth_ancestor_of_tree_node.cpp
src/traversal/: inorder.cpp  preorder.cpp
unit_tests/: CMakeLists.txt  utils.hpp
unit_tests/binary_search_tree/: test_find_closest_value.cpp  test_is_valid_bst.cpp  test_mode.cpp  test_next_greater_number.cpp
unit_tests/binary_tree/: test_branch_sum.cpp  test_count_complete_tree_nodes.cpp  test_node_depths.cpp  test_number_of_full_nodes.cpp  test_utils.cpp
unit_tests/traversal/: test_inorder.cpp  test_preorder.cpp
